# h24-1-services

./: README.md  pyproject.toml
src/service/: __main__.py
src/service/app/: app.py  settings.py
src/service/app/routes/v1/: router.py
src/service/domain/commands/: services.py
src/service/domain/models/: base.py  services.py
src/service/domain/views/: services.py
src/service/infrastructure/sqlalchemy/: repository.py  session_manager.py
